--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -54,8 +54,8 @@ under the License.
 
       <nav role="navigation">
         <ul class="nav">
-          <li><a href="qgenius.com/qcasting/">首页</a></li>
-          <li><a href="http://qgenius.github.io/qcasting-docs/v2/" target="_blank">开发文档</a></li>
+<!--           <li><a href="qgenius.com/qcasting/">首页</a></li>
+          <li><a href="http://qgenius.github.io/qcasting-docs/v2/" target="_blank">开发文档</a></li> -->
         </ul>
 
         <% if language_tabs %>
