--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -48,7 +48,7 @@ under the License.
     <header class="navbar navbar-default navbar-fixed-top" role="banner">
       <div class="navbar-header">
         <a href="../" class="navbar-brand">
-          <img src="http://qgroup.qiniudn.com/qcasting-logo-small-t.png" />
+          <img src="http://7q5ceh.com1.z0.glb.clouddn.com/pili/logo-pili-white.png" />
         </a>
       </div>
 
