--- a/source/stylesheets/syntax.css.scss.erb
+++ b/source/stylesheets/syntax.css.scss.erb
@@ -20,7 +20,7 @@ under the License.
 ThankfulEyes, Colorful, Github, Base16, Base16::Solarized (like Octopress), Base16::Monokai, and Monokai
 */
 
-<%= Rouge::Themes::Base16::Solarized.render(:scope => '.highlight') %>
+<%= Rouge::Themes::Github.render(:scope => '.highlight') %>
 
 .highlight .c,
 .highlight .cm,
@@ -31,7 +31,7 @@ ThankfulEyes, Colorful, Github, Base16, Base16::Solarized (like Octopress), Base
 
 .highlight,
 .highlight .w {
-  background-color: $code-bg;
+  background-color: #f8f8f8;
 }
 
 .highlight .err {
