--- a/source/stylesheets/variables.scss
+++ b/source/stylesheets/variables.scss
@@ -23,32 +23,45 @@ under the License.
 
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #393939;
+$nav-bg: #1199c4;
+
 $examples-bg: #393939;
 $code-bg: #292929;
 $code-annotation-bg: #1c1c1c;
+
 $nav-subitem-bg: #262626;
 $nav-active-bg: #2467af;
+
 $lang-select-border: #000;
-$lang-select-bg: #222;
-$lang-select-active-bg: $examples-bg; // feel free to change this to blue or something
-$lang-select-pressed-bg: #111; // color of language tab bg when mouse is pressed
-$main-bg: #eaf2f6;
+$lang-select-bg: #17b2e2;
+$lang-select-active-bg: #17b2e2; // feel free to change this to blue or something
+$lang-select-pressed-bg: #19BB9C; // color of language tab bg when mouse is pressed
+
+$main-bg: #FFF;
+
 $aside-notice-bg: #8fbcd4;
 $aside-warning-bg: #c97a7e;
 $aside-success-bg: #6ac174;
 $search-notice-bg: #c97a7e;
 
+$tocify-wrapper-bg: rgb(241, 242, 244);
+$tocify-wrapper-link: #363f44;
+$tocify-wrapper-link-hover: #f6f8f8;
+
+$tocify-focus: $nav-bg;
 
 // TEXT COLORS
 ////////////////////
 $main-text: #333; // main content text color
 $nav-text: #fff;
 $nav-active-text: #fff;
+
 $lang-select-text: #fff; // color of unselected language tab text
 $lang-select-active-text: #fff; // color of selected language tab text
 $lang-select-pressed-text: #fff; // color of language tab text when mouse is pressed
 
+
+$link-color: $nav-bg;
 
 // SIZES
 ////////////////////
