Disable search module.

--- a/source/stylesheets/variables.scss
+++ b/source/stylesheets/variables.scss
@@ -21,6 +21,9 @@ under the License.
 // Use these settings to help adjust the appearance of Slate
 
 
+$enabled-search: none;
+
+
 // BACKGROUND COLORS
 ////////////////////
 $nav-bg: #1199c4;
