--- a/source/stylesheets/syntax.css.scss.erb
+++ b/source/stylesheets/syntax.css.scss.erb
@@ -31,7 +31,7 @@ ThankfulEyes, Colorful, Github, Base16, Base16::Solarized (like Octopress), Base
 
 .highlight,
 .highlight .w {
-  background-color: #f8f8f8;
+  background-color: transparent;
 }
 
 .highlight .err {
