--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,17 +19,20 @@ under the License.
   <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="keywords" content="QINIU, live, RTMP, HLS, M3U8, API, DOC" />
-    <meta name="description" content="为开发者量身定制的直播云服务.">
+    <meta name="keywords" content="pili,霹雳流,直播,流媒体,RTMP,HLS,M3U8,HDS,DASH,H264,AAC,RTSP,FLV,MPEGTS" />
+    <meta name="description" content="霹雳流——直播流媒体云服务">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title><%= current_page.data.title || "API Documentation" %></title>
 
+    <title><%= current_page.data.title || "霹雳流开发文档" %></title>
+
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <%= stylesheet_link_tag :screen, media: :screen %>
     <%= stylesheet_link_tag :print, media: :print %>
 
-    <link rel="stylesheet" type="text/css" href="http://cdn.staticfile.org/font-awesome/4.2.0/css/font-awesome.min.css">
 
-    <script src="http://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+
     <% if current_page.data.search %>
       <%= javascript_include_tag  "all" %>
     <% else %>
@@ -47,40 +50,64 @@ under the License.
 
   <body class="<%= page_classes %>">
 
-    <header class="navbar navbar-default navbar-fixed-top" role="banner">
-      <div class="navbar-header">
-        <a href="../" class="navbar-brand">
-          <img src="http://7q5ceh.com1.z0.glb.clouddn.com/pili/logo-pili-white.png" />
-        </a>
-      </div>
+    <header class="navbar navbar-default navbar-static-top navbar-fixed-top" role="banner">
+      <div class="container-full">
 
-      <nav role="navigation">
-        <!--
-        <ul class="nav">
-          <li><a href="qgenius.com/qcasting/">首页</a></li>
-          <li><a href="http://qgenius.github.io/qcasting-docs/v2/" target="_blank">开发文档</a></li>
-        </ul>
-        -->
+        <div class="navbar-header">
+          <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse" ng-click="collapseToggle()">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
-        <% if language_tabs %>
-          <div class="lang-selector">
-            <% language_tabs.each do |lang| %>
-              <% if lang.is_a? Hash %>
-                <a href="#" data-language-name="<%= lang.keys.first %>"><%= lang.values.first %></a>
-              <% else %>
-                <a href="#" data-language-name="<%= lang %>"><%= lang %></a>
+          <a id="logo" class="navbar-brand" ui-sref="public.main">
+            <img src="https://dn-pili-static.qbox.me/images/logo.png" />
+          </a>
+        </div>
+
+        <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation" collapse="isCollapsed">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a ui-sref="public.main">首页</a></li>
+
+            <li dropdown>
+              <a href="javascript:;" class="dropdown-toggle clear" dropdown-toggle>解决方案</a>
+
+              <ul class="dropdown-menu" id="solutions-menu">
+                <li><a ui-sref="public.solution.game">游戏直播</a></li>
+                <li><a ui-sref="public.solution.live">现场直播</a></li>
+                <li><a ui-sref="public.solution.phone">手机直播</a></li>
+                <li><a ui-sref="public.solution.remote">监控直播</a></li>
+                <li><a ui-sref="public.solution.wearable">可穿戴式</a></li>
+                <li><a ui-sref="public.solution.education">教学直播</a></li>
+                <li><a ui-sref="public.solution.radio">电台直播</a></li>
+              </ul>
+            </li>
+            <li><a href="http://api.pili.qiniu.com/docs/" target="_blank">开发文档</a></li>
+          </ul>
+
+          <!--
+          <% if language_tabs %>
+            <div class="lang-selector">
+              <% language_tabs.each do |lang| %>
+                <% if lang.is_a? Hash %>
+                  <a href="#" data-language-name="<%= lang.keys.first %>"><%= lang.values.first %></a>
+                <% else %>
+                  <a href="#" data-language-name="<%= lang %>"><%= lang %></a>
+                <% end %>
               <% end %>
-            <% end %>
-          </div>
-        <% end %>
-      </nav>
+            </div>
+          <% end %>
+          -->
+        </nav>
+      </div>
     </header>
 
+    <!-- <div class="flag">Fork</div> -->
 
     <a href="#" id="nav-button">
       <span><i class="fa fa-bars"></i> NAV</span>
     </a>
-
 
     <div class="tocify-wrapper">
       <% if language_tabs %>
@@ -94,14 +121,14 @@ under the License.
           <% end %>
         </div>
       <% end %>
-
       <% if current_page.data.search %>
-        <div class="search"><input type="text" class="search" id="input-search" placeholder="Search"></div>
+        <div class="search">
+          <input type="text" class="search" id="input-search" placeholder="Search">
+        </div>
         <ul class="search-results"></ul>
       <% end %>
-
-      <div id="toc"></div>
-
+      <div id="toc">
+      </div>
       <% if current_page.data.toc_footers %>
         <ul class="toc-footer">
           <% current_page.data.toc_footers.each do |footer| %>
@@ -112,15 +139,12 @@ under the License.
     </div>
 
     <div class="page-wrapper">
-
       <div class="content">
         <%= yield %>
         <% current_page.data.includes && current_page.data.includes.each do |include| %>
           <%= partial "includes/#{include}" %>
         <% end %>
       </div>
-
-      <div class="dark-box"></div>
     </div>
 
   </body>
