--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -1,12 +1,8 @@
 @charset "utf-8";
-
 @import 'compass';
 @import 'variables';
 @import 'syntax';
-
-// @import 'solarized-dark';
-
-// @import 'superhero-bootstrap';
+@import 'responsive';
 
 /*
 Copyright 2008-2013 Concur Technologies, Inc.
@@ -29,127 +25,95 @@ under the License.
 ////////////////////////////////////////////////////////////////////////////////
 
 html, body {
-  // font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  // font-family: "Lantinghei SC","Hiragino Sans GB","Microsoft Yahei";
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  line-height: 1.42857143;
-  color: rgb(54, 63, 68);
-  background-color: $main-bg;
-
-  height: 100%;
+  color: $main-text;
   padding: 0;
   margin: 0;
-
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @extend %default-font;
+  background-color: $main-bg;
+  height: 100%;
   -webkit-text-size-adjust: none; /* Never autoresize text */
 }
 
-body{
-  margin: 0;
-  padding-top: 50px;
+
+//
+.container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse {
+  width: auto;
+  margin-right: 0;
+  margin-left: -15px;
 }
 
-a{
-  color: $link-color;
-}
-
-header{
-  width: 100%;
-  height: 50px;
-  line-height: 50px;
-  position: fixed;
-  top: 0;
-  z-index: 999;
-  background: $nav-bg;
-
-  img{ margin-bottom: 0;}
-
-  .navbar-header{
-    width: 231px; float: left;
-    .navbar-brand{
-      display: inline-block;
-      margin: 0px 20px;
-      background-image: url(http://7q5ceh.com1.z0.glb.clouddn.com/pili/logo-pili-white.png);
-      background-repeat: no-repeat;
-      background-color: transparent;
-      background-position: center;
-      background-size: contain;
-
-      img{
-        width: 100%;
-        opacity: 0;
-      }
-    }
-
-    @media only screen and (-webkit-device-pixel-ratio: 2){
-      .navbar-brand {
-        background-image: url(http://7q5ceh.com1.z0.glb.clouddn.com/pili/logo-pili-white@2x.png);
-      }
-    }
-  }
-
-  nav{
-    margin-left: 230px;
-    ul {
-      float: left;
-      height: 45px;
-      margin: 0;
-      li{
-        float: left;
-        margin: 0;
-        list-style: none;
-        a, &:active, &:visited{
-          display: block;
-          line-height: 45px;
-          padding: 0 15px;
-          color: #ebebeb !important;
-          text-decoration: none;
-          &:hover{ color: #ebebeb; background-color: #485563;}
-        }
-      }
-    }
-    .lang-selector{
-      margin-left: 50%;
-      width: 49%;
-      padding-top: 8px;
-    }
-  }
-}
-
-
-.lang-selector {
-  font-weight: bold;
-  a {
-    display: block;
-    float:left;
-    margin-right: 1px;
-    color: $lang-select-text;
+header.navbar{
+  background-color: #FBFBFB;
+  .navbar-brand { height: auto; line-height: inherit; }
+  .navbar-nav > li { margin-left: 5px; margin-right: 20px; }
+  .navbar-nav > li > a {
+    padding: 3px 0;
     text-decoration: none;
-    padding: 0 10px;
-    line-height: 30px;
-    background-color: $lang-select-bg;
-
-    &:active {
-      background-color: $lang-select-pressed-bg;
-      color: $lang-select-pressed-text;
-    }
-
-    &.active {
-      background-color: $lang-select-active-bg;
-      color: $lang-select-active-text;
-    }
-  }
-
-  &:after {
-    content: '';
-    clear: both;
-    display: block;
   }
 }
 
+.navbar .navbar-nav > li > a:hover,
+.navbar .navbar-nav > li > a:focus,
 
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus{
+  background-color: transparent;
+  color: #46bee3;
+  border-bottom: 1px solid #46bee3;
+}
+
+
+#logo{
+  padding: 0;
+  background-image: url(https://dn-pili-static.qbox.me/images/logo.png);
+  background-repeat: no-repeat;
+  background-color: transparent;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+
+  img{ width: 100%; opacity: 0; }
+}
+@media only screen and (-webkit-device-pixel-ratio: 2){
+  #logo{ background-image: url(https://dn-pili-static.qbox.me/images/logo@2x.png); }
+}
+
+
+.flag{
+  width: 200px;
+  line-height: 22px;
+  background: #46bee3;
+  color: #FFF;
+  position: fixed;
+  top: 20px;
+  right: -75px;
+  z-index: 1031;
+  text-align: center;
+  letter-spacing: 5px;
+
+  transform:rotate(45deg);
+  -ms-transform:rotate(45deg);   /* IE 9 */
+  -moz-transform:rotate(45deg);  /* Firefox */
+  -webkit-transform:rotate(45deg); /* Safari 和 Chrome */
+  -o-transform:rotate(45deg);  /* Opera */
+}
+
+
+h3, .h3{
+  font-size: 22px;
+}
+
+pre{
+  border: none;
+}
+blockquote{
+  font-size: 14px;
+  border: none;
+}
 
 ////////////////////////////////////////////////////////////////////////////////
 // TABLE OF CONTENTS
@@ -170,13 +134,13 @@ header{
   border-right: 1px solid #dee5e7;
   position: fixed;
   z-index: 30;
-  top: 50px;
+  top: 72px;
   left: 0;
   bottom: 0;
   width: $nav-width;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
-  background: $tocify-wrapper-bg;
+  background: #FFF;
 
   // language selector for mobile devices
   .lang-selector {
@@ -193,7 +157,6 @@ header{
   & > img { display: block; }
 
   & > .search {
-    display: $enabled-search;
     position: relative;
 
     input {
@@ -217,7 +180,6 @@ header{
   }
 
   .search-results {
-    display: $enabled-search;
     margin-top: 0;
     @include box-sizing(border-box);
     height: 0;
@@ -242,13 +204,15 @@ header{
   }
 
 
-  .tocify-item > a, .toc-footer li {
+  .tocify-item > a,
+  .toc-footer li {
     padding: 10px 15px;
     display: block;
     overflow-x: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     font-weight: normal;
+    color: #333;
   }
 
   // The Table of Contents is composed of multiple nested
@@ -270,18 +234,15 @@ header{
   }
 
   a{
-    color: $tocify-wrapper-link; text-decoration: none;
+    text-decoration: none;
 
-    &:hover { text-decoration: none; background-color: $tocify-wrapper-link-hover; }
+    &:hover { text-decoration: none; }
   }
 
   // This is the currently selected ToC entry
   .tocify-focus {
     margin-right: -1px;
-    background-color: $tocify-focus;
-
-    a{ color: #FFF; }
-    a:hover{ background-color: $tocify-focus;}
+    a{ color: #008cff}
   }
 
   // Subheaders are the submenus that slide open
@@ -380,6 +341,8 @@ header{
 
 .content {
   // to place content above the dark box
+  max-width: 960px;
+  margin: 0 auto;
   padding: 0 0 20px 0;
   position: relative;
   z-index: 30;
@@ -414,17 +377,20 @@ header{
   }
 
   h1 {
-    font-size: 2em;
     margin: 0;
-    padding-top: 25px;
+    padding: 85px 0 5px 0;
     border-bottom: 1px solid #dee5e7;
+    font-size: 22px;
   }
 
   h2 {
-    margin: 0 20px;
-    padding: 0;
-    padding-top: 20px;
-    border-bottom: 1px solid #eeeef4;
+    margin: 0 0 10px 0;
+    padding: 75px 0 5px 0;
+    font-size: 18px;
+  }
+
+  h3{
+    font-size: 16px;
   }
 
   // h2s right after h1s should bump right up
@@ -501,15 +467,18 @@ header{
 
   code {
     display: inline-block;
-    background-color: rgb(238, 238, 244);
+    background-color: #eeeef4;
     margin-left: 3px;
     margin-right: 3px;
     padding: 0 5px;
     border-radius: 2px;
-    @extend %break-words;
+    color: #363f44;
 
+    @extend %break-words;
     &:first-child{ margin-left: 0;}
   }
+
+  pre code{ background-color: transparent;}
 
   aside {
     padding-top: 1em;
@@ -646,15 +615,4 @@ header{
   %right-col + %left-col {
     margin-top: $main-padding;
   }
-}
-
-
-#logo{
-  line-height: 48px;
-  font-size: 24px;
-  margin: 0;
-  padding: 0;
-  color: #000;
-  text-align: center;
-  background-color: rgb(255, 168, 0);
 }
