--- a/source/stylesheets/variables.scss
+++ b/source/stylesheets/variables.scss
@@ -21,57 +21,41 @@ under the License.
 // Use these settings to help adjust the appearance of Slate
 
 
-$enabled-search: none;
-
-
 // BACKGROUND COLORS
 ////////////////////
-$nav-bg: #1199c4;
-
-$examples-bg: #393939;
+$nav-bg: #FFF;
+$examples-bg: #FFF;
 $code-bg: #292929;
 $code-annotation-bg: #1c1c1c;
-
-$nav-subitem-bg: #262626;
-$nav-active-bg: #2467af;
-
+$nav-subitem-bg: #FFF;
+$nav-active-bg: #FFF;
 $lang-select-border: #000;
-$lang-select-bg: #17b2e2;
-$lang-select-active-bg: #17b2e2; // feel free to change this to blue or something
-$lang-select-pressed-bg: #19BB9C; // color of language tab bg when mouse is pressed
-
+$lang-select-bg: #222;
+$lang-select-active-bg: $examples-bg; // feel free to change this to blue or something
+$lang-select-pressed-bg: #111; // color of language tab bg when mouse is pressed
 $main-bg: #FFF;
-
 $aside-notice-bg: #8fbcd4;
 $aside-warning-bg: #c97a7e;
 $aside-success-bg: #6ac174;
 $search-notice-bg: #c97a7e;
 
-$tocify-wrapper-bg: rgb(241, 242, 244);
-$tocify-wrapper-link: #363f44;
-$tocify-wrapper-link-hover: #f6f8f8;
-
-$tocify-focus: $nav-bg;
 
 // TEXT COLORS
 ////////////////////
 $main-text: #333; // main content text color
 $nav-text: #fff;
 $nav-active-text: #fff;
-
 $lang-select-text: #fff; // color of unselected language tab text
 $lang-select-active-text: #fff; // color of selected language tab text
 $lang-select-pressed-text: #fff; // color of language tab text when mouse is pressed
 
 
-$link-color: $nav-bg;
-
 // SIZES
 ////////////////////
 $nav-width: 230px; // width of the navbar
-$examples-width: 0; // portion of the screen taken up by code examples
+$examples-width: 50%; // portion of the screen taken up by code examples
 $logo-margin: 20px; // margin between nav items and logo, ignored if search is active
-$main-padding: 20px; // padding to left and right of content & examples
+$main-padding: 28px; // padding to left and right of content & examples
 $nav-padding: 15px; // padding to left and right of navbar
 $nav-v-padding: 10px; // padding used vertically around search boxes and results
 $nav-indent: 10px; // extra padding for ToC subitems
@@ -84,19 +68,18 @@ $phone-width: $tablet-width - $nav-width; // min width before reverting to mobil
 // FONTS
 ////////////////////
 %default-font {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  // font-family: 'Lantinghei SC', 'Hiragino Sans GB', 'Microsoft Yahei';
+  font-size: 13px;
 }
 
 %header-font {
   @extend %default-font;
-  font-size: 14px;
   font-weight: bold;
 }
 
 %code-font {
   font-family: Consolas, Menlo, Monaco, "Lucida Console", "Liberation Mono", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Courier New", monospace, serif;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.5;
 }
 
