--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -145,6 +145,10 @@ under the License.
           <%= partial "includes/#{include}" %>
         <% end %>
       </div>
+
+      <footer>
+        <p>Copyright &copy; 2015 Pili Engineering, Qiniu Inc. All Rights Reserved.</p>
+      </footer>
     </div>
 
   </body>
