Update logo style.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -62,7 +62,7 @@ under the License.
           </button>
 
           <a id="logo" class="navbar-brand" ui-sref="public.main">
-            <img src="https://dn-pili-static.qbox.me/images/logo.png" />
+            <img src="https://dn-pili-static.qbox.me/images/logo-web.png" />
           </a>
         </div>
 
